[package]
name = "clawguard"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Security gateway for OpenClaw - WebSocket proxy, skill scanner, API cost limiter"
license = "MIT"
repository = "https://github.com/flydevox/clawguard"
readme = "README.md"
keywords = ["openclaw", "security", "websocket", "proxy", "ai-agent"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["build_orchestrator.js", "/target"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
dashmap = "5"
